--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 		<section id="home" class="welcome-hero">
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>best place to find and explore <br> that all you need </h2>
+					<h2>Gopal Bajagain Personal Page </h2>
 					<p>
-						Find Best Place, Restaurant, Hotel, Real State and many more think in just One click 
+						Gopal Bajagain Personal Page
 					</p>
 				</div>
 				<div class="welcome-hero-serch-box">
