--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">list<span>race</span></a>
+			                <a class="navbar-brand" href="index.html">Bajgain<span>Gopal</span></a>
 
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
@@ -153,7 +153,7 @@
 						Gopal Bajagain Personal Page
 					</p>
 				</div>
-				<div class="welcome-hero-serch-box">
+				<!-- <div class="welcome-hero-serch-box">
 					<div class="welcome-hero-form">
 						<div class="single-welcome-hero-form">
 							<h3>what?</h3>
@@ -178,7 +178,7 @@
 						<button class="welcome-hero-btn" onclick="window.location.href='#'">
 							 search  <i data-feather="search"></i> 
 						</button>
-					</div>
+					</div>  -->
 				</div>
 			</div>
 
