--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">Bajgain<span>Gopal</span></a>
+			                <a class="navbar-brand" href="index.html">Bajagain<span>Gopal</span></a>
 
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
